<resources>
    <string name="app_name">Hackathon Browser</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_hackathons">Search Hackathons</string>
    <string name="an_image_of_the_event">An image of the event.</string>
    <string name="sample_text">Sample text is here</string>
    <string name="showcase_fragment">Showcase Fragment</string>
    <string name="today">Today</string>
    <string name="all_events">All Events</string>
    <string name="favorites">Favorites</string>
    <string name="end_of_results">END OF RESULTS</string>
    <string name="title_activity_hackathon">Hackathon View</string>

    <string name="hackathon_starred">Hackathon starred.</string>
    <string name="hackathon">hackathon</string>
    <string name="start_end_time">%1$s - %2$s</string>
    <string name="travel_remimbursment">Travel reimbursement</string>
    <string name="bus_route">Bus route</string>
    <string name="apply">Apply</string>
    <string name="force_scroll">This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably. This is a lot of text. It\'ll force the container to scroll probably.</string>
    <string name="hardware">Hardware</string>
    <string name="sponsors">Sponsors</string>
    <string name="guest_speakers">Guest Speakers</string>
    <string name="prizes">Prizes</string>
    <string name="miscellaneous">Miscellaneous</string>

    <string name="auth0_client_id">vIZ8UrlA4vByjltC1mmeTTjGCJzOokEL</string>
    <string name="auth0_domain">wolf-beacon.auth0.com</string>
    <string name="you_must_sign_in">You must sign in to view hackathons.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
